--- a/Headers animados e responsivos com HTML, CSS e JS/EcoWorld/index.html
+++ b/Headers animados e responsivos com HTML, CSS e JS/EcoWorld/index.html
@@ -13,16 +13,17 @@
         <div class="logo">
             <img src="imgs/ecoworld-logo.png" alt="Logomarca da EcoWorld">
         </div>
-        <nav class="nav-bar">
+        <nav class="nav-bar abs-pos">
             <ul>
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#participe">Participe</a></li>
-                <li><a href="https://www.blogger.com/" target="_blank">Blog</a></li>
-                <li><a href="#transparencia">Transparência</a></li>
+                <li class="int-link">Sobre</li>
+                <li class="int-link">Participe</li>
+                <li class="ext-link">Blog</li>
+                <li class="int-link">Transparência</li>
             </ul>
 
         </nav>
     </header>
+    <section class="ghost"></section>
     <main>
         <section id="sobre">Sobre</section>
         <section id="participe">Participe</section>
