terminado menu mobile

--- a/Headers animados e responsivos com HTML, CSS e JS/Omnitech/index.html
+++ b/Headers animados e responsivos com HTML, CSS e JS/Omnitech/index.html
@@ -14,9 +14,7 @@
                     <img src="img/omnitech-logo-1.png" alt="Logomarca da Omnitech">
                 </div>
                 <div class="menu">
-                    <div class="hambuguer">
-
-                    </div>
+                    <div class="hamburguer max-hamburguer"> </div>
                 </div>
                 <nav class="nav-bar max-nav">
                     <ul>
